--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,11 +1,14 @@
-version: "3.9"
+version: '3.9'
 
 services:
   app:
-    build: .
+    image: ${IMAGE}
     container_name: sotopong
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - "8000:8000"
+      - '8000:8000'
     volumes:
       - sotopong-data:/app/sotopong.db
     restart: unless-stopped
