--- a/.github/workflows/deploy.job.yml
+++ b/.github/workflows/deploy.job.yml
@@ -1,4 +1,4 @@
-name: Deploy to self-hosted
+name: Deploy
 
 on:
   push:
@@ -7,9 +7,10 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  RAILWAY_SERVICE: app
 
 jobs:
-  build-and-push:
+  build-push-deploy:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -36,42 +37,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           file: ./Dockerfile
-
-  deploy:
-    needs: build-and-push
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Deploy over SSH
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          port: ${{ secrets.SSH_PORT || 22 }}
-          script_stop: true
-          script: |
-            set -e
-            mkdir -p ~/sotomat_pong
-            cd ~/sotomat_pong
-            cat > docker-compose.prod.yml <<'EOF'
-            version: "3.9"
-            services:
-              app:
-                image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-                container_name: sotopong
-                ports:
-                  - "8000:8000"
-                volumes:
-                  - sotopong-data:/app/sotopong.db
-                restart: unless-stopped
-            volumes:
-              sotopong-data:
-            EOF
-            docker compose -f docker-compose.prod.yml pull app || true
-            docker compose -f docker-compose.prod.yml up -d
-            docker image prune -f
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
