--- a/.github/workflows/deploy.job.yml
+++ b/.github/workflows/deploy.job.yml
@@ -7,7 +7,6 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-  IMAGE_NAME_LOWER: ${{ toLower(github.repository) }}
   RAILWAY_SERVICE: app
 
 jobs:
@@ -19,6 +18,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Set image slug (lowercase)
+        run: echo "IMAGE_SLUG=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -40,5 +42,5 @@ jobs:
           push: true
           file: ./Dockerfile
           tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_LOWER }}:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_LOWER }}:${{ github.sha }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_SLUG }}:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_SLUG }}:${{ github.sha }}
