--- a/.github/workflows/deploy.job.yml
+++ b/.github/workflows/deploy.job.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           context: .
           push: true
-          file: ./Dockerfile
+          file: ./Dockerfile.prod
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_SLUG }}:latest
             ${{ env.REGISTRY }}/${{ env.IMAGE_SLUG }}:${{ github.sha }}
